# CMakeReferenceProject

./: README.md
scripts/: build.bat  clean.bat
src/: CMakeLists.txt  main.cpp
src/files/: class_intern.cpp  class_intern.hpp
src/libraries/: CMakeLists.txt
src/libraries/dependent_library_private/: CMakeLists.txt
src/libraries/dependent_library_private/header/: class_dependent_private.hpp
src/libraries/dependent_library_private/src/: class_dependent_private.cpp
src/libraries/dependent_library_public/: CMakeLists.txt
src/libraries/dependent_library_public/header/: class_dependent_public.hpp
src/libraries/dependent_library_public/src/: class_dependent_public.cpp
src/libraries/dynamic_library/: CMakeLists.txt
src/libraries/dynamic_library/header/: class_dynamic.hpp
src/libraries/dynamic_library/header_hidden/: class_dynamic_hidden.hpp
src/libraries/dynamic_library/src/: class_dynamic.cpp  class_dynamic_hidden.cpp
src/libraries/static_library/: CMakeLists.txt
src/libraries/static_library/header/: class_static.hpp
src/libraries/static_library/header_hidden/: class_static_hidden.hpp
src/libraries/static_library/src/: class_static.cpp  class_static_hidden.cpp
